Fix Chrome z-index handling
This has changed since two years ago -- it's more like Firefox, but
needs to explicitly set z-index on the things behind the clickable
books in front, too.

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -138,6 +138,7 @@ a:hover {
   position: relative;
   opacity: 0;
   pointer-events: none;
+  z-index: 0;
 }
 
 .library-book div {
